<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_shape"
    android:padding="4dp"
    android:layout_centerInParent="true"
    android:minWidth="310dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txt_title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:maxLines="1"
        android:maxLength="18"
        android:textColor="@color/black"
        android:text="@string/temporary_title"/>
    <EditText
        android:id="@+id/et_first_content"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:maxLines="1"
        android:inputType="text"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_et_dialog_content"
        android:hint="@string/hint_password2"/>
    <EditText
        android:id="@+id/et_second_content"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="14sp"
        android:gravity="center"
        android:maxLines="1"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/shape_et_dialog_content"
        android:hint="@string/hint_remark2"/>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn_white"
            android:text="@string/str_cancel"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn_white"
            android:textColor="@color/blue"
            android:text="@string/str_confirm"/>
    </LinearLayout>


</LinearLayout>