<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/alimama_bold"
        android:text="@string/pwd_generation_title"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:paddingTop="28dp"
            android:paddingBottom="20dp"
            android:background="@color/white">
            <TextView
                android:id="@+id/txt_title_len"
                style="@style/CustomTextViewStyle"
                android:text="@string/pwd_length_title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_title_len">

                <NumberPicker
                    android:id="@+id/num_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/txt_title_len"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_len" />

                <EditText
                    android:id="@+id/et_remark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_et_remark_content"
                    android:gravity="start"
                    android:inputType="text"
                    android:hint="@string/hint_remark"
                    android:maxEms="100"
                    android:maxLines="8"
                    android:autofillHints="name"
                    style="@style/CustomEditTextStyle"
                    android:textSize="13sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="20dp"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/num_picker"
                    app:layout_constraintTop_toTopOf="@+id/num_picker" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/rl_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_container">

                <CheckBox
                    android:id="@+id/cb_digit"
                    style="@style/CustomTextViewStyle"
                    android:buttonTint="@color/primary_variant"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/str_digit" />

                <CheckBox
                    android:id="@+id/cb_upper_case"
                    style="@style/CustomTextViewStyle"
                    android:layout_below="@id/cb_digit"
                    android:layout_marginTop="0dp"
                    android:buttonTint="@color/primary_variant"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/str_uppercase" />

                <CheckBox
                    android:id="@+id/cb_lower_case"
                    style="@style/CustomTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/cb_digit"
                    android:buttonTint="@color/primary_variant"
                    android:checked="true"
                    android:minHeight="48dp"
                    android:text="@string/str_lowercase"
                    tools:ignore="RelativeOverlap" />


                <CheckBox
                    android:id="@+id/cb_special_chars"
                    style="@style/CustomTextViewStyle"
                    android:layout_below="@id/cb_digit"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/cb_upper_case"
                    android:buttonTint="@color/primary_variant"
                    android:minHeight="48dp"
                    android:text="@string/str_special_chars" />

                <ImageView
                    android:id="@+id/img_viewing_passwords"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/img_description"
                    android:src="@drawable/ic_view_db" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_pwd_content"
                style="@style/CustomEditTextStyle"
                android:layout_marginTop="10dp"
                android:inputType="text"
                android:background="@drawable/shape_et_pwd_content"
                android:gravity="center"
                android:hint="@string/hint_password"
                android:autofillHints="name"
                android:maxLines="1"
                android:minHeight="48dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_container" />

            <LinearLayout
                android:id="@+id/rl_container2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_pwd_content">

                <!--<View
                    android:layout_width="0dp"
                    android:layout_height="36dp"
                    android:layout_weight="0.3" />-->

                <Button
                    android:id="@+id/btn_generation_pwd"
                    style="@style/CustomButtonStyle"
                    android:background="@drawable/shape_btn_main_blue2"
                    android:text="@string/str_generation_pwd"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/btn_copy"
                    style="@style/CustomButtonStyle"
                    android:background="@drawable/shape_btn_main_blue2"
                    android:text="@string/str_copy"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_save_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_btn_main_blue2"
        android:text="@string/str_save_pwd"
        android:textSize="16sp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white" />

</LinearLayout>