<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_shape"
    android:paddingTop="4dp"
    android:layout_centerInParent="true"
    android:minWidth="310dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txt_title"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:gravity="center"
        android:textSize="18sp"
        android:maxLines="1"
        android:maxLength="18"
        android:textColor="@color/black"
        android:text="@string/str_sure_delete"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="@color/gray"/>
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn_white"
            android:layout_marginStart="4dp"
            android:text="@string/str_cancel"/>
        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/gray"/>
        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn_white"
            android:textColor="@color/pink"
            android:text="@string/str_confirm"/>
    </LinearLayout>


</LinearLayout>