<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:paddingStart="4dp"
    android:paddingEnd="4dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:layout_height="68dp">

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:text="@string/temporary_title"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txt_remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_password"
        android:layout_alignParentStart="true"
        android:layout_marginStart="10dp"

        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxEms="18"
        android:maxLines="1"
        android:text="@string/temporary_content"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txt_stored_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:text="@string/temporary_datetime" />


    <!--//TODO:此处是要实现侧滑显示删除，点击删除，并未实现-->
    <!--<FrameLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:background="@color/red">
        <TextView
            android:id="@+id/txt_swipe_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="删除"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </FrameLayout>-->

</RelativeLayout>
