<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_pwd_repository"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.PwdRepositoryActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp">
        <!--用来增大点击范围，更好的返回体验-->
        <FrameLayout
            android:id="@+id/fl_container_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="18dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/img_description"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:scaleType="centerCrop" />
        </FrameLayout>
        <TextView
            android:id="@+id/txt_title_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alimama_bold"
            android:text="@string/pwd_repository_title"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"/>
    </RelativeLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:id="@+id/txt_empty_data_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_empty_data"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:visibility="gone"
            android:textSize="18sp"
            android:gravity="center"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>